--- a/_posts/2017-03-13-mat257-notes.md
+++ b/_posts/2017-03-13-mat257-notes.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Analysis II
+title: Analysis II Notes
 ---
 
 These notes are from a course called <em>MAT257: Analysis II</em>. It is the more theoretical version of MAT237. The notes are found from
