--- a/_posts/2017-03-13-mat257-notes.md
+++ b/_posts/2017-03-13-mat257-notes.md
@@ -5,6 +5,8 @@ title: Analysis II Notes
 
 These notes are from a course called <em>MAT257: Analysis II</em>. It is the more theoretical version of MAT237. The notes are found from
 Dr. Dror Bar-Natan's website <a href="http://drorbn.net/index.php?title=1617-257">here</a>. The notes posted here are all of them compiled into
-document as well as having been typeset.
+a single document as well as having been typeset.
 
 The notes can be downloaded from my Github <a href="https://github.com/anmolBhullar/anmolbhullar.github.io/tree/master/notes">here</a>.
+
+[Not finished]
