Working on chap1.tex + Added preface.tex
Essentially added an exercise and an answer so I know what I want the rest of the code to look like and what it will look like on a PDF.

--- a/solutions/mat327 big list/mat327_big_list.tex
+++ b/solutions/mat327 big list/mat327_big_list.tex
@@ -30,7 +30,7 @@
 %\usepackage{natbib}
 
 %    Include other referenced packages here.
-\usepackage{}
+\usepackage{exercise}
 
 \newtheorem{theorem}{Theorem}[chapter]
 \newtheorem{lemma}[theorem]{Lemma}
@@ -55,25 +55,17 @@
 
 \frontmatter
 
-\title{}
+\title{MAT327: Introduction to Topology. Solutions to the Big List Problems}
 
 %    Remove any unused author tags.
 
 %    author one information
-\author{}
-\address{}
-\curraddr{}
-\email{}
-\thanks{}
+\author{Anmol Bhullar}
+\address{ Undergraduate Student University of Toronto, Scarborough}
+\email{anmol.bhullar@mail.utoronto.ca}
+\thanks{Thank you to my instructor Ivan Khatchatourian for providing these wonderful problems}
 
-%    author two information
-\author{}
-\address{}
-\curraddr{}
-\email{}
-\thanks{}
-
-\subjclass[2000]{Primary }
+% \subjclass[2000]{Primary }
 %    The 2010 edition of the Mathematics Subject Classification is
 %    now available.  If you are citing a classification from the
 %    new scheme, use the following input coding instead.
@@ -101,11 +93,11 @@
 \tableofcontents
 
 %    Include unnumbered chapters (preface, acknowledgments, etc.) here.
-\include{}
+\include{preface}
 
 \mainmatter
 %    Include main chapters here.
-\include{}
+\include{chapter1_topologies}
 
 \appendix
 %    Include appendix "chapters" here.
