added another question onto the big list and deleted some trivial files

--- a/solutions/mat327 big list/chapter1_topologies.tex
+++ b/solutions/mat327 big list/chapter1_topologies.tex
@@ -5,4 +5,7 @@
 		Fix $a<b\in\mathbb{R}$. Show explicitly that the open interval $(a,b)$ is open in $\mathbb{R}_{\text{usual}}$. Show explicitly
 		that the interval $[a,b)$ is not open in $\mathbb{R}_{\text{usual}}$.
 	\Answer First, we show that $(a, b)$ is open in $\mathbb{R}_{\text{usual}}$.
+    \Exercise\marker*1
+        Let $X$ be a set and $\mathcal{B} = \{ \{x\}: x\in X\}$. Show that the only topology on $X$ that contains $\mathcal{B}$ %
+        as a subset is the discrete topology.
 \end{ExerciseList}
