worked on some more solutions

--- a/solutions/mat327 big list/mat327_big_list.tex
+++ b/solutions/mat327 big list/mat327_big_list.tex
@@ -53,6 +53,7 @@
 \newcommand{\B}{\mathcal{B}}
 \newcommand{\e}{\epsilon}
 \newcommand{\T}{\mathcal{T}}
+\newcommand{\NN}{\mathbb{N}}
 
 %    For a single index; for multiple indexes, see the manual
 %    "Instructions for preparation of papers and monographs:
