--- a/solutions/mat327 big list/chapter1_topologies.tex
+++ b/solutions/mat327 big list/chapter1_topologies.tex
@@ -65,4 +65,75 @@
     Since this is the union of arbitrary elements of $\T$, then %
     $A\in\T$.
 
+    \Exercise[difficulty=1] Let $(X,\T)$ be a topological space, and %
+    let $f: X\to Y$ be injective. Is $\T_f := \{f(U): U\in\T\}$ a %
+    topology on $Y$? Is it necessairly a topology on the range of $f$?
+
+    \Answer Lost solution : (
+
+    \Exercise[difficulty=1] Let $X$ be a set and let $\T_1$ and %
+    $\T_2$ be two topologies on $X$. Is $\T_1\cup\T_2$ a topology %
+    on $X$? What about $\T_1\cap\T_2$? Is yes, prove it. If not, %
+    provide a counterexample.
+
+    \Answer Let $\T_1 := \T_{\text{usual}}$, $\T_2 := \T_7$ on $\RR$. 
+    Consider:
+    \[(6,7) \cap [6.5, 7] \qquad\text{both in}\T_1\cup\T_2)\]
+    but this intersection yields the interval: $[6.5,7)$
+    which is not open in either $\T_1$ or $\T_2$. So $\T_1\cup\T_2$ %
+    is not necessairly a topology. Now, we show that $\T_1\cap\T_2$ %
+    is a topology:\\
+    \begin{align*}
+        \emptyset\in\T_1,\emptyset\in\T_2\implies\emptyset%
+        \in\T_1\cap\T_2 \\
+        X\in\T_1, X\in\T_2 \implies X\in\T_1\cap\T_2
+    \end{align*}
+    Furthermore, given, $U,V\in\T_1,T_2$. Then $U\cap V$ is in both %
+    $\T_1$ and $\T_2$ so it follows $U, V\in\T_1\cap\T_2$ and that %
+    since $U,V\in\T_1$, then $U\cap V\in\T_1$. Similarly for $\T_2$ %
+    so then $U\cap V\in\T_1\cap\T_2$. Thus, the finite intersection %
+    of open sets in $\T_1\cap\T_2$ is in $\T_1\cap\T_2$. Now it is %
+    left to show that $\cup_{\alpha\in I} V_{\alpha} \in %
+    \T_1\cap\T_2$ given that for all $\alpha\in I$, $V_{\alpha} \in %
+    \T_1\cap\T_2$. If every $V_{\alpha}\in\T_1\cap\T_2$, then it %
+    follows $\cup V_{\alpha}\in T_1$ and similarly for $\T_2$.
+    Thus $\T_1\cap\T_2$ is a topology.
+
+    \Exercise[difficulty=1] Let $X$ be an infinite set. Show that %
+    there are infinitely many topologies on $X$.
+
+    \Answer Define $\T_{\text{co-k}} := \{U\subseteq X: %
+    |U^c|\leq k\}$. Since $\T_{\text{co-k}}$ is a topology for all %
+    $k\in\NN$, it follows that if $|X|=\infty$, then there are %
+    infinite topologies on $X$.
+
+    \Exercise[difficulty=1] Let $\{\T_{\alpha} : \alpha\in I\}$ be %
+    a collection of topologies on a set $X$, where $I$ is some %
+    indexing set. Prove that there is a unique finest topology that %
+    is refined by all the $\T_{\alpha}'s$. That is, prove that %
+    there is a topology $\T$ on $X$ such that:
+    \begin{enumerate}
+        \item $\T_{\alpha}$ refines $\T$ for every $\alpha\in I$
+        \item If $\T^{'}$ is another topology that fulfills (a), %
+            then $\T$ is finer than $\T^{'}$
+    \end{enumerate}
+
+    \Answer Claim: $\T = \cap \T_{\alpha}$. By Ex 7, $\T$ is a %
+    topology, and $\T_{\alpha}$ refines $\T$ by construction of %
+    $\T$. Suppose $T^{'}$ is another topology of $X$ such that %
+    all $\T_{\alpha}$ refine $\T^{'}$ and that $\T{'}$ refines %
+    $\T$. Then, there exists $x\in\T^{'}$ such that $x\not\in\T$.
+    But then $x\not\in \cap \T_{\alpha}$ so there exists %
+    $T_{\alpha_0}$ such that $x\not\in\T_{\alpha_0}$. Thus $\T$ %
+    is not refined by $\T^{'}$ and then $\T^{'}=\T$ which implies %
+    $\T$ is unique.
+
+    \Exericse[difficulty=1] This extends exercise 6. Show with %
+    examples that the assumption that $f$ is injective is necessary.
+    That is, give an example of a topological space $(X,\T)$ and %
+    a non-injective function $f:X\to Y$ such that $\T_f$ is a %
+    topology and another example where $\T_f$ is not.
+
+    \Answer An example of a non-injective function which is a %
+    topology.
 \end{ExerciseList}
