--- a/solutions/mat327 big list/mat327_big_list.tex
+++ b/solutions/mat327 big list/mat327_big_list.tex
@@ -50,6 +50,7 @@
 
 %   Commands
 \newcommand{\RR}{\mathbb{R}}
+\newcommand{\QQ}{\mathbb{Q}}
 \newcommand{\B}{\mathcal{B}}
 \newcommand{\e}{\epsilon}
 \newcommand{\T}{\mathcal{T}}
