fixed a bug causing chapter 2 not appear in pdf

--- a/solutions/mat327 big list/mat327_big_list.tex
+++ b/solutions/mat327 big list/mat327_big_list.tex
@@ -108,6 +108,7 @@
 \mainmatter
 %    Include main chapters here.
 \include{chapter1_topologies}
+\include{chapter2_bases}
 
 \appendix
 %    Include appendix "chapters" here.
