Added a working copy of some of my differential topology solutions. I am working on these as well - albeit slower than the topology solutions

--- a/solutions/mat327 big list/mat327_big_list.tex
+++ b/solutions/mat327 big list/mat327_big_list.tex
@@ -49,6 +49,7 @@
 \numberwithin{equation}{chapter}
 
 %   Commands
+\newcommand{\Po}{\mathcal{P}}
 \newcommand{\RR}{\mathbb{R}}
 \newcommand{\QQ}{\mathbb{Q}}
 \newcommand{\B}{\mathcal{B}}
